--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "db:drop": "ts-node ./src/db/dropDB.ts",
+    "db:create": "ts-node ./src/db/createDB.ts",
+    "db:seed": "ts-node ./src/db/seedDB.ts",
+    "db:init": "npm run db:drop && npm run db:create && npm run db:seed",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -23,14 +27,18 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/sequelize": "^10.0.0",
+    "@types/sequelize": "^4.28.15",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "mongoose": "^6.3.0",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -41,6 +49,7 @@
     "@types/jest": "27.4.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
